# ML-Project-House-Loan-Prediction

./: Home Loan EDA.ipynb  README.md  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/ml_house_loan_prediction/: exception.py  logger.py
